completed the css of the login and register page

--- a/client/src/css/homepage.css
+++ b/client/src/css/homepage.css
@@ -21,6 +21,10 @@
     font-size: 18px;
     margin-bottom: 20px;
   }
+
+  .section-description{
+    color: antiquewhite;
+  }
   
   /* Feature Slider */
   
